fix logo wrapping

--- a/assets/scss/logo.scss
+++ b/assets/scss/logo.scss
@@ -3,6 +3,7 @@
   height: 54px;
   position: relative;
   user-select: none;
+  white-space: nowrap;
 
   &:hover {
     text-decoration: none;
